[project]
name = "etd-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.7",
    "langchain-core>=1.0.5",
    "langchain-docling>=2.0.0",
    "langchain-milvus>=0.3.0",
    "langchain-ollama>=1.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
